--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,500;1,100;1,300;1,500&display=swap" rel="stylesheet">
     </head>
     <body>
 
+         <ul>
+            <li><a class="nav-link" href="#about">about</a></li>
+            <li><a class="nav-link" href="#projects">projects</a></li>
+            <li><a class="nav-link" href="#contact-me">contact</a></li>
+        </ul>
+        <section id="welcome-section">
+            <h1>welcome.</h1>
+        </section>
         
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </body>
