added hover feature to highlight red

--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,500;1,100;1,300;1,500&display=swap" rel="stylesheet">
     </head>
     <body>
+        <header>
+        <img class="logo" src="#">
+        <nav>
+            <ul class="nav__link">
+                <li><a href="#about">about</a></li>
+                <li><a href="#projects">projects</a></li>
+                <li><a href="#contact-me">contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-         <ul>
-            <li><a class="nav-link" href="#about">about</a></li>
-            <li><a class="nav-link" href="#projects">projects</a></li>
-            <li><a class="nav-link" href="#contact-me">contact</a></li>
-        </ul>
         <section id="welcome-section">
-            <h1>welcome.</h1>
+            <h1>welcome</h1>
         </section>
         
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
