slight amend to html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-        <img class="logo" src="#">
+        <img class="logo" src="#" ALT="logo">
         <nav>
             <ul class="nav__link">
                 <li><a href="#about">about</a></li>
