--- a/index.html
+++ b/index.html
@@ -14,17 +14,25 @@
         <img class="logo" src="#" ALT="logo">
         <nav>
             <ul class="nav__link">
-                <li><a href="#about">about</a></li>
-                <li><a href="#projects">projects</a></li>
-                <li><a href="#contact-me">contact</a></li>
+                <li><a class="desktop-nav" href="#about">about</a></li>
+                <li><a class="desktop-nav" href="#projects">projects</a></li>
+                <li><a class="desktop-nav" href="#contact-me">contact</a></li>
             </ul>
         </nav>
+          <a onclick="openNav()"class="menu" href="#">&equiv;</a>
     </header>
-
+<div id="mobile-menu" class="overlay">
+  <a class="close" onclick="closeNav()">&times;</a>
+  <div class="overlay-content">
+               <a href="#about">about</a>
+                <a href="#projects">projects</a>
+                <a href="#contact-me">contact</a>
+  </div>
+      </div>
         <section id="welcome-section">
-            <h1>welcome</h1>
+            <h1 class="welcome-text">welcome</h1>
         </section>
-        
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+      <script type="text/javascript" src="mobile.js"></script>
     </body>
 </html>
