initial commit for about section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <section id="welcome-section">
             <h1 class="welcome-text">welcome</h1>
         </section>
+        <section id="about">
+            <h1>about</h1>
+            <p>I make digital work for you. Together we can build a project plan to reach your ideal customer.</p>
+        </section>
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
       <script type="text/javascript" src="mobile.js"></script>
     </body>
