added content and structure to the about and projects section

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
  <html>
     <head>
@@ -35,8 +36,23 @@
         <section id="about">
             <h1>about</h1>
             <p>I make digital work for you. Together we can build a project plan to reach your ideal customer.</p>
+          <a href="" class=""><h5 id="find-out">Find out how &oplus;</h5></a>
         </section>
-        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+        <section id="projects">
+          <h1>projects</h1>
+          <p >My projects demonstrate my ability to think strategically and execute plans flawlessly.</p>
+          <div class="project-display">
+            <div class="project-tile"></div>
+            <div class="project-listing">
+                <h3>Tribute Page</h3>
+                <h3>Survey Form</h3>
+                <h3>Product Page</h3>
+                <h3>Technical Documentation</h3>
+            </div>
+          </div>
+          <a href="" class=""><h5 id="find-out">More projects &oplus;</h5></a>
+      </section>
+      <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
       <script type="text/javascript" src="mobile.js"></script>
     </body>
 </html>
