Horizontal scroll for project-tiles using overflow-x and -y

--- a/index.html
+++ b/index.html
@@ -42,13 +42,10 @@
           <h1>projects</h1>
           <p >My projects demonstrate my ability to think strategically and execute plans flawlessly.</p>
           <div class="project-display">
-            <div class="project-tile"></div>
-            <div class="project-listing">
-                <h3>Tribute Page</h3>
-                <h3>Survey Form</h3>
-                <h3>Product Page</h3>
-                <h3>Technical Documentation</h3>
-            </div>
+            <div class="project-tile" id="tribute-page"></div>
+            <div class="project-tile" id="form-fill"></div>
+            <div class="project-tile"id="product-page"></div>
+            <div class="project-tile"id="portfolio"></div>
           </div>
           <a href="" class=""><h5 id="find-out">More projects &oplus;</h5></a>
       </section>
