--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-        <img class="logo" src="#" ALT="logo">
+        <img class="logo" src="" ALT="logo">
         <nav>
             <ul class="nav__link">
                 <li><a class="desktop-nav" href="#about">about</a></li>
@@ -42,13 +42,22 @@
           <h1>projects</h1>
           <p >My projects demonstrate my ability to think strategically and execute plans flawlessly.</p>
           <div class="project-display">
-            <div class="project-tile" id="tribute-page"></div>
+            <div class="project-tile" id="tribute-page">
+            </div>
             <div class="project-tile" id="form-fill"></div>
             <div class="project-tile"id="product-page"></div>
             <div class="project-tile"id="portfolio"></div>
           </div>
           <a href="" class=""><h5 id="find-out">More projects &oplus;</h5></a>
       </section>
+      <footer>
+          <section id="contact">
+              <h1>contact me</h1>
+              <p>info@wearedata.co.uk</p>
+              <p>12345 678 901</p>
+              <p>123 Kings Cross<br>London<br>LN1 2DN</p>
+          </section>
+      </footer>
       <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
       <script type="text/javascript" src="mobile.js"></script>
     </body>
