--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-        <img class="logo" src="" ALT="logo">
+        <img class="logo" src="https://image.flaticon.com/icons/svg/838/838579.svg" alt="logo">
         <nav>
             <ul class="nav__link">
                 <li><a class="desktop-nav" href="#about">about</a></li>
