added footer content and display flex

--- a/index.html
+++ b/index.html
@@ -57,6 +57,23 @@
               <p>12345 678 901</p>
               <p>123 Kings Cross<br>London<br>LN1 2DN</p>
           </section>
+          <section id="subscribe">
+            <h1>subscribe</h1>
+            <form>
+            </form action="">
+            <label for="name"></label>
+            <input type="text" id="name" name="name" placeholder="name">
+            <label for="email"></label><br>
+            <input type="email" id="email" name="email" placeholder="name@example.com"><br>
+            <input type="submit" value="Submit">
+          </section>
+            <section id="FAQ">
+              <h1>FAQs</h1>
+              <p>lorem ipsum</p>
+              <p>lorem ipsum</p>
+              <p>lorem ipsum</p>
+              <p>lorem ipsum</p>
+            </section>
       </footer>
       <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
       <script type="text/javascript" src="mobile.js"></script>
