footer mobile responsive and amened margin left

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <body>
         <header>
         <img class="logo" src="https://image.flaticon.com/icons/svg/838/838579.svg" alt="logo">
-        <nav>
+        <nav id="navbar">
             <ul class="nav__link">
                 <li><a class="desktop-nav" href="#about">about</a></li>
                 <li><a class="desktop-nav" href="#projects">projects</a></li>
-                <li><a class="desktop-nav" href="#contact-me">contact</a></li>
+                <li><a class="desktop-nav" href="#contact">contact</a></li>
             </ul>
         </nav>
           <a onclick="openNav()"class="menu" href="#">&equiv;</a>
