find me section added to footer

--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
               <p>lorem ipsum</p>
               <p>lorem ipsum</p>
             </section>
+            <section id="find-me">
+              <h1>find me</h1>
+              <p>GitHub</p>
+              <p>LinkedIn</p>
+              <p>Instagram</p>
+              <p>Twitter</p>
+            </section>
       </footer>
       <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
       <script type="text/javascript" src="mobile.js"></script>
