made nav bar sticky on desktop and linked profile links

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
             </section>
             <section id="find-me">
               <h1>find me</h1>
-              <p>GitHub</p>
-              <p>LinkedIn</p>
-              <p>Instagram</p>
-              <p>Twitter</p>
+              <a id="profile-link" href="https://github.com/BURTON96" target="_blank"><p>GitHub</p></a>
+              <a id="codepen" href="https://codepen.io/your-work"><p>Code Pen</p></a>
+              <a href="google.com"><p>Instagram</p></a>
+              <a href="google.com"><p>Twitter</p></a>
             </section>
       </footer>
       <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
